# sona

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  commitlint.config.cjs  eslint.config.js  implementation_plan.md  index.html  package-lock.json  package.json  patch.diff  patch.py  patch2.diff  patch2.py  patch3.diff  patch3.py  patch4.py  patch_service.ts  patch_sherpa.rs  patch_use_caption.ts  plan.md  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  temp_test  test_audio  test_audio.rs  test_plan.sh  test_sherpa_flush.rs  tsc_output.txt  tsconfig.json  verify_live_record.py  (+4 more)
adapters/api_server/: Cargo.toml
adapters/api_server/src/: error.rs  lib.rs
adapters/archive/: Cargo.toml
adapters/archive/src/: backup.rs  lib.rs
adapters/archive/tests/: archive.rs  backup.rs
adapters/export/: Cargo.toml
adapters/export/src/: lib.rs
adapters/export/tests/: export.rs
adapters/local_asr/: Cargo.toml  build.rs
adapters/local_asr/src/: audio.rs  batch.rs  gpu.rs  lib.rs  offline.rs  punctuation.rs  recognizer.rs  runtime.rs  speaker.rs  speaker_processing.rs
adapters/local_asr/tests/: batch_port.rs  offline_port.rs  punctuation.rs  recognizer.rs  vad.rs
adapters/media_detector/: Cargo.toml
adapters/media_detector/src/: lib.rs
adapters/media_detector/tests/: media_detector.rs
adapters/model_downloads/: Cargo.toml
adapters/model_downloads/src/: downloads.rs  lib.rs  models.rs
adapters/model_downloads/tests/: model_downloads.rs
adapters/online_asr/: Cargo.toml
adapters/online_asr/src/: lib.rs
adapters/online_llm/: Cargo.toml
adapters/online_llm/src/: anthropic.rs  completion.rs  gemini.rs  lib.rs  model_discovery.rs  models_dev.rs  ollama.rs  openai_compatible.rs  providers.rs  responses.rs  streaming.rs  transport.rs
adapters/online_llm/tests/: api_host.rs  completion_contract.rs  models_dev.rs
adapters/recovery_fs/: Cargo.toml
adapters/recovery_fs/src/: lib.rs
adapters/recovery_fs/tests/: recovery_fs.rs
adapters/runtime_fs/: Cargo.toml
adapters/runtime_fs/src/: dashboard_time.rs  diagnostics.rs  diagnostics_time.rs  lib.rs  storage_usage_time.rs
adapters/runtime_fs/tests/: runtime_fs.rs
adapters/sqlite/: Cargo.toml
adapters/sqlite/src/: analytics.rs  application_context.rs  automation.rs  backup_state.rs  backup_state_repository.rs  config_store.rs  dashboard_repository.rs  error.rs  history_archive.rs  history_backup.rs  history_fs_utils.rs  history_mutation_repository.rs  history_query_repository.rs  history_store.rs  legacy_change_time.rs  legacy_migration.rs  lib.rs  llm_usage.rs  project.rs  schema.rs  storage_usage.rs  storage_usage_repository.rs  sync_repository.rs  tag.rs  task_ledger.rs
adapters/sqlite/tests/: application_context.rs  backup_state.rs  config_store.rs  dashboard.rs  history_environment.rs  history_mutation_repository.rs  history_query_repository.rs  project_compatibility.rs  storage_usage_repository.rs  sync_clock.rs  sync_repository.rs  tag_repository.rs  tagged_history_trash.rs
adapters/sync/: Cargo.toml  README.md
adapters/sync/src/: application.rs  backoff.rs  crypto.rs  legacy_backup.rs  lib.rs  protocol.rs  runtime.rs  vault.rs
adapters/sync_webdav/: Cargo.toml
adapters/ts_bind/: Cargo.toml
adapters/uniffi_bind/: Cargo.toml  README.md
adapters/webdav/: Cargo.toml
adapters/webdav/src/: lib.rs
core/: Cargo.toml
core/src/: archive.rs  asr_metrics.rs  automation.rs  cli_config.rs  cli_models.rs  cli_runtime.rs  diagnostics.rs  downloads.rs  export.rs  file_utils.rs  history.rs  history_store.rs  lib.rs  llm_jobs.rs  llm_provider_protocol.rs  llm_providers.rs  llm_requests.rs  llm_streaming_protocol.rs  llm_tasks.rs  llm_usage.rs  media_detector.rs  model_catalog.rs  model_config.rs  model_downloads.rs  model_paths.rs  paths.rs  preset-models.json  preset_models.rs  project.rs  runtime.rs  runtime_config.rs  serve_runtime.rs  speaker.rs  speaker_correction.rs  speaker_review.rs  text_alignment.rs  transcribe_runtime.rs  transcript.rs  transcript_postprocess.rs  webdav.rs
core/tests/: app_config_service.rs  asr_batch_requests.rs  asr_contract.rs  asr_errors.rs  asr_metrics.rs  asr_provider_resolution.rs  asr_streaming_ports.rs  automation.rs  automation_service.rs  backup_service.rs  cli_config.rs  cli_models.rs  cli_runtime.rs  config_migration.rs  dashboard.rs  diagnostics.rs  export.rs  gpu.rs  history.rs  history_mutation_service.rs  history_query_service.rs  llm_jobs.rs  llm_model_catalog.rs  llm_ports.rs  llm_provider_protocol.rs  llm_requests.rs  llm_runtime.rs  llm_streaming_protocol.rs  llm_task_service.rs  llm_tasks.rs  media_detector.rs  model_catalog.rs  model_config.rs  model_downloads.rs  model_paths.rs  paths.rs  ports.rs  preset_models.rs  project.rs  project_service.rs  (+17 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  windows-test-manifest.rc
src-tauri/benches/: llm_bench.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons-nightly/: icon.icns
src-tauri/sidecar/: build.mjs  package-lock.json  package.json  sherpa-recognizer.js
src-tauri/src/: ai.rs  app_settings.rs  archive.rs  asr_providers.rs  audio.rs  automation_repository.rs  automation_runtime.rs  aux_window_state.rs  cli.rs  config_core.rs  dashboard.rs  diagnostics_core.rs  downloads.rs  export.rs  hardware.rs  history_repository.rs  lib.rs  lib.rs.orig  llm.rs  llm_providers.rs  llm_usage.rs  main.rs  media_detector.rs  pipeline.rs  preset_models.rs  project_repository.rs  recovery.rs  runtime_status.rs  server.rs  setup.rs  sherpa.rs  speaker.rs  speaker_correction.rs  speaker_review.rs  storage.rs  streaming.rs  system.rs  text_alignment.rs  tray.rs  webdav.rs
src-tauri/tests/: automation_repository.rs  blocking_io_test.rs  cli.rs  desktop_entry.rs  dynamic_linking_tests.rs  project_repository.rs  recovery_repository.rs  sqlite_integration.rs  task_ledger.rs
tools/uniffi_bindgen/: Cargo.toml
(+1128 files in other folders)
