[workspace]
resolver = "3"
members = [
    "adapters/archive",
    "adapters/export",
    "adapters/local_asr",
    "adapters/media_detector",
    "adapters/model_downloads",
    "adapters/online_llm",
    "adapters/online_asr",
    "adapters/sqlite",
    "adapters/ts_bind",
    "adapters/uniffi_bind",
    "adapters/webdav",
    "core",
    "platforms/cli",
    "src-tauri",
]

[workspace.package]
version = "0.8.0"
authors = ["AirSodaz"]
edition = "2024"
