[package]
name = "sona-core"
version.workspace = true
description = "Pure Rust core domain types and logic for Sona"
authors.workspace = true
edition.workspace = true

[features]
default = []
specta = ["dep:specta"]

[dependencies]
unicode-normalization = "0.1"
async-trait = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
regex = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"], optional = true }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
hex = "0.4"
sha2 = "0.11"
toml = "0.8.20"
infer = "0.16"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "sync"] }
