[package]
name = "sona-core"
version.workspace = true
description = "Pure Rust core domain types and logic for Sona"
authors.workspace = true
edition.workspace = true

[features]
default = []
specta = ["dep:specta", "dep:specta-typescript"]

[dependencies]
unicode-normalization = "0.1"
async-trait = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
regex = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"], optional = true }
specta-typescript = { version = "0.0.12", optional = true }
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0.18"
futures-util = "0.3"
toml = "0.8.20"
infer = "0.16"
jsonschema = { version = "0.37", default-features = false }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "sync"] }
