[package]
name = "tauri-appsona"
version = "0.6.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-appsona"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appsona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tar = "0.4"
bzip2 = "0.4"
toml = "0.8.20"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
rig-core = "0.34"
futures-util = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rubato = "0.16"
ringbuf = "0.4"
tauri-plugin-process = "2"
hound = "3.5.1"
sevenz-rust = "0.6.1"
sherpa-onnx = "1.12.39"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
urlencoding = "2.1.3"
enigo = "0.6"
tauri-plugin-global-shortcut = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3.20.0"
