[package]
name = "sona"
version.workspace = true
description = "Sona - A privacy-first, offline transcript editor"
authors.workspace = true
edition.workspace = true
default-run = "sona"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_appsona_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3.0.9"


[dependencies]
sona-archive = { path = "../adapters/archive" }
sona-core = { path = "../core", features = ["specta"] }
sona-export = { path = "../adapters/export" }
sona-local-asr = { path = "../adapters/local_asr" }
sona-media-detector = { path = "../adapters/media_detector" }
sona-model-downloads = { path = "../adapters/model_downloads" }
sona-online-llm = { path = "../adapters/online_llm" }
sona-online-asr = { path = "../adapters/online_asr" }
sona-runtime-fs = { path = "../adapters/runtime_fs" }
sona-sqlite = { path = "../adapters/sqlite" }
sona-webdav = { path = "../adapters/webdav" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
toml = "0.8.20"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["stream", "rustls", "json", "multipart"] }
regex = "1"
rig-core = "0.39"
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
futures-util = "0.3"
glob = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"
cpal = "0.18"
rubato = "0.16"
ringbuf = "0.4"
tauri-plugin-process = "2"
hound = "3.5.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
tauri-plugin-log = "2"
log = "0.4.22"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
urlencoding = "2.1.3"
enigo = "0.6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-prevent-default = "5.0.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
notify = "6.1.1"
walkdir = "2.5.0"
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
unicode-normalization = "0.1"
thiserror = "2.0.18"
axum = { version = "0.8", features = ["multipart", "macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "auth", "fs"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
ipnet = "2.10"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
fs3 = "0.5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[dev-dependencies]
tempfile = "3.20.0"
tower = { version = "0.5", features = ["util"] }
