[package]
name = "sona-archive"
version.workspace = true
description = "Archive filesystem adapter for Sona"
authors.workspace = true
edition.workspace = true

[package.metadata.sona]
role = "outbound-adapter"

[dependencies]
bzip2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sona-core = { path = "../../core" }
tar = "0.4"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
