[package]
name = "sona-local-asr"
version.workspace = true
description = "Reusable local offline ASR adapter for Sona"
authors.workspace = true
edition.workspace = true
build = "build.rs"

[package.metadata.sona]
role = "outbound-adapter"

[dependencies]
async-trait = "0.1"
glob = "0.3"
hound = "3.5.1"
log = "0.4.22"
regex = "1"
serde_json = "1"
sha2 = "0.11"
sona-core = { path = "../../core" }
sherpa-onnx = { version = "=1.13.4", default-features = false, features = ["shared"] }
sysinfo = { version = "0.38.4", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["process", "rt", "macros", "fs", "io-util", "sync"] }
walkdir = "2.5.0"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
