[package]
name = "sona-model-downloads"
version.workspace = true
description = "Model download adapter for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
bzip2 = "0.4"
fs3 = "0.5"
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
sha2 = "0.11"
sona-core = { path = "../../core" }
sona-runtime-fs = { path = "../runtime_fs" }
thiserror = "2.0.18"
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "signal"] }
tar = "0.4"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
