[package]
name = "sona-online-asr"
version.workspace = true
description = "Reusable online ASR provider adapters for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.13", features = ["rustls", "json", "multipart"] }
serde_json = "1"
sona-core = { path = "../../core" }
tokio = { version = "1", features = ["fs"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
