[package]
name = "sona-online-asr"
version.workspace = true
description = "Reusable online ASR provider adapters for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
log = "0.4.22"
reqwest = { version = "0.13", features = ["rustls", "json", "multipart"] }
serde_json = "1"
sona-core = { path = "../../core" }
tokio = { version = "1", features = ["fs", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
