[package]
name = "sona-recovery-fs"
version.workspace = true
description = "Filesystem adapter for Sona recovery snapshots"
authors.workspace = true
edition.workspace = true

[package.metadata.sona]
role = "outbound-adapter"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sona-core = { path = "../../core" }

[dev-dependencies]
tempfile = "3"
