[package]
name = "sona-runtime-fs"
version.workspace = true
description = "Runtime filesystem and environment adapter for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sona-core = { path = "../../core" }
uuid = { version = "1", features = ["v4"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_System_LibraryLoader"] }

[dev-dependencies]
tempfile = "3"
