[package]
name = "sona-sqlite"
version.workspace = true
description = "SQLite adapter for Sona core ports"
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
log = "0.4.22"
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sona-core = { path = "../../core" }
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3"
