[package]
name = "sona-sync"
version.workspace = true
description = "Provider-neutral encrypted sync runtime for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
hex = "0.4"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sona-core = { path = "../../core" }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
zeroize = "1"

[dev-dependencies]
sona-sqlite = { path = "../sqlite" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
