[package]
name = "sona-sync-webdav"
version.workspace = true
description = "WebDAV SyncObjectStore adapter for Sona"
authors.workspace = true
edition.workspace = true

[package.metadata.sona]
role = "outbound-adapter"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sona-core = { path = "../../core" }
sona-sync = { path = "../sync" }
tokio = { version = "1", features = ["fs"] }
url = "2"
urlencoding = "2.1.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
