[package]
name = "sona-ts-bind"
version.workspace = true
description = "TypeScript binding metadata for Sona core"
authors.workspace = true
edition.workspace = true

[dependencies]
sona-core = { path = "../../core", features = ["specta"] }
specta = { version = "=2.0.0-rc.25" }

[dev-dependencies]
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
