[package]
name = "sona-ts-bind"
version.workspace = true
description = "TypeScript binding metadata for Sona core"
authors.workspace = true
edition.workspace = true

[package.metadata.sona]
role = "inbound-adapter"

[dependencies]
serde = "1"
serde_json = "1"
sona-core = { path = "../../core", features = ["specta"] }
specta = { version = "=2.0.0-rc.25" }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
thiserror = "2.0.18"
