[package]
name = "sona-uniffi-bind"
version.workspace = true
description = "UniFFI-facing facade for Sona core"
authors.workspace = true
edition.workspace = true

[lib]
name = "sona_uniffi_bind"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
sona-core = { path = "../../core" }
sona-runtime-fs = { path = "../runtime_fs" }
thiserror = "2.0.18"
uniffi = "0.29"
