[package]
name = "sona-uniffi-bind"
version.workspace = true
description = "UniFFI-facing facade for Sona core"
authors.workspace = true
edition.workspace = true

[lib]
name = "sona_uniffi_bind"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
sona-core = { path = "../../core" }
sona-online-asr = { path = "../online_asr" }
sona-recovery-fs = { path = "../recovery_fs" }
sona-runtime-fs = { path = "../runtime_fs" }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uniffi = { version = "0.32", features = ["tokio"] }
