[package]
name = "sona-uniffi-bind"
version.workspace = true
description = "UniFFI-facing facade for Sona core"
authors.workspace = true
edition.workspace = true

[lib]
name = "sona_uniffi_bind"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
sona-archive = { path = "../archive" }
sona-core = { path = "../../core" }
sona-export = { path = "../export" }
sona-local-asr = { path = "../local_asr" }
sona-online-asr = { path = "../online_asr" }
sona-online-llm = { path = "../online_llm" }
sona-recovery-fs = { path = "../recovery_fs" }
sona-runtime-fs = { path = "../runtime_fs" }
sona-sqlite = { path = "../sqlite" }
sona-sync = { path = "../sync" }
sona-sync-webdav = { path = "../sync_webdav" }
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uniffi = { version = "0.32", features = ["tokio"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
async-trait = "0.1"
sha2 = "0.10"
tempfile = "3"
