[package]
name = "sona-webdav"
version.workspace = true
description = "WebDAV network adapter for Sona"
authors.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
url = "2"
urlencoding = "2.1.3"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
